<resources>
    <string name="app_name">Disaster Preperation</string>
    <string name="tornado">Tornado</string>
    <string name="hurricane">Hurricane</string>
    <string name="earthquake">Earthquake</string>
    <string name="tornadoes_are_vertical_funnels_of_rapidly_spinning_air_they_arre_born_in_thunderstorms_and_are_often_accompanied_by_hail_with_giant_persistent_thunderstorms_called_supercells_being_known_to_spawn_the_most_destructive_tornadoes">Tornadoes are vertical funnels of rapidly spinning air. They arre born in thunderstorms and are often accompanied by hail, with giant, persistent thunderstorms called supercells being known to spawn the most destructive tornadoes.</string>
    <string name="tornadoes_form_when_warm_humid_air_collides_with_cold_dry_air_when_the_denser_cold_air_is_pushed_over_the_warm_air_thunderstorms_are_produced_when_the_warm_air_rises_through_the_colder_air_it_causes_an_updraft_that_will_begin_to_rotate_if_winds_vary_in_speed_or_direction">Tornadoes form when warm, humid air collides with cold, dry air. When the denser cold air is pushed over the warm air, thunderstorms are produced. When the warm air rises through the colder air, it causes an updraft that will begin to rotate if winds vary in speed or direction.</string>
    <string name="the_rotating_updraft_which_is_called_a_mesocycle_draws_in_more_warm_air_from_the_thunderstorm_the_rotation_speed_increases_the_cold_air_from_the_jet_stream_provides_more_energy_and_water_from_the_moist_air_helps_form_the_funnel_cloud_once_the_funnel_cloud_touches_the_ground_it_becomes_a_tornado">The rotating updraft, which is called a mesocycle, draws in more warm air from the thunderstorm, the rotation speed increases. The cold air from the jet stream provides more energy, and water from the moist air helps form the funnel cloud. Once the funnel cloud touches the ground, it becomes a tornado.</string>
    <string name="while_tornadoes_can_happen_anywhere_they_are_most_common_in_the_great_plains_otherwise_known_as_tornado_alley_this_is_caused_by_the_cold_dry_air_coming_down_from_canada_meeting_the_warm_moist_air_traveling_from_the_gulf_of_mexico">While tornadoes can happen anywhere, they are most common in the Great Plains, otherwise known as Tornado Alley. This is caused by the cold, dry air coming down from Canada meeting the warm, moist air traveling from the Gulf of Mexico.</string>
    <string name="tsunami">Tsunami</string>
    <string name="volcano">Volcano</string>
    <string name="tab8">Tab8</string>
    <string name="wildfire">Wildfire</string>
    <string name="blizzard">Blizzard</string>
    <string name="drought">Drought</string>
    <string name="flood">Flood</string>
    <string name="_2_0_micro_8_000_per_day_est"><![CDATA[<2.0 Micro 8,000 per day (est.)]]></string>
    <string name="tsunamis_also_known_as_seismic_sea_waves_are_a_series_of_enormous_waves_that_are_created_by_an_underwater_disturbance_such_as_an_earthquake_landslide_volcanic_eruption_or_meteorite_a_tsunami_can_travel_for_hundreds_of_miles_per_hour_in_the_open_oean_and_smash_into_land_with_waves_as_high_as_100_feet_or_even_more">Tsunamis, also known as seismic sea waves, are a series of enormous waves that are created by an underwater disturbance, such as an earthquake, landslide, volcanic eruption, or meteorite. A tsunami can travel for hundreds of miles per hour in the open oean and smash into land with waves as high as 100 feet, or even more.</string>
    <string name="tsunamis_can_occur_in_all_large_bodies_of_water_but_are_more_common_in_the_pacific_ocean_this_is_not_only_due_to_its_size_but_also_due_to_the_series_of_mountains_deep_ocean_trenches_and_the_ring_of_fire_off_the_coasts_of_kamchatka_japan_the_kuril_islands_alaska_and_south_america">Tsunamis can occur in all large bodies of water but are more common in the Pacific Ocean. This is not only due to its size, but also due to the series of mountains, deep-ocean trenches, and the ring of fire(off the coasts of Kamchatka, Japan: the Kuril Islands; Alaska and South America).</string>
    <string name="tsunamis_are_detected_using_open_ocen_buoys_and_by_coastal_tide_gauges_the_information_from_these_instruments_is_reported_back_in_real_time_to_tsunami_warning_centers_one_in_alaska_and_another_in_hawaii_warning_centers_also_use_earthquake_seismic_data_to_estimate_the_strength_of_the_tsunamis_from_the_character_of_an_earthquake_since_seismic_waves_travel_faster_than_tsunamis">Tsunamis are detected using open-ocen buoys and by coastal tide gauges. The information from these instruments is reported back in real-time to tsunami warning centers (one in Alaska and another in Hawaii). Warning centers also use earthquake (seismic) data to estimate the strength of the tsunamis from the character of an earthquake, since seismic waves travel faster than tsunamis.</string>
    <string name="what_are_tornadoes">What are tornadoes?</string>
    <string name="what_causes_tornadoes">What causes tornadoes?</string>
    <string name="enhanced_fujita_scale">Enhanced Fujita Scale</string>
    <string name="ef_rating_class_wind_speed_mph_km_j">EF Rating Class Wind Speed (MPH / KM/J)</string>
    <string name="ef_0_weak_65_85_105_137">EF-0 Weak 65-85 / 105-137</string>
    <string name="ef_1_weak_86_110_137_177">EF-1 Weak 86-110 / 137-177</string>
    <string name="ef_2_strong_111_135_178_217">EF-2 Strong 111-135 / 178-217</string>
    <string name="ef_3_strong_136_165_218_266">EF-3 Strong 136-165 / 218-266</string>
    <string name="ef_4_violent_166_200_267_322">EF-4 Violent 166-200 / 267-322</string>
    <string name="ef_5_violent_200_322"><![CDATA[EF-5 Violent >200 / >322]]></string>
    <string name="what_are_tsunamis">What are tsunamis?</string>
    <string name="where_are_they_common">Where are they common?</string>
    <string name="how_are_they_detected">How are they detected?</string>
    <string name="what_are_blizzards">What are blizzards?</string>
    <string name="a_blizzard_is_a_storm_with_considerable_falling_or_blowing_snow_and_winds_in_excess_of_35_mph_as_well_as_visibilities_of_less_than_1_4_mile_for_at_least_3_hours">A blizzard is a storm with considerable falling or blowing snowand winds in excess of 35 mph, as well as visibilities of less than 1/4 mile for at least 3 hours.</string>
    <string name="why_are_they_dangerous">Why are they dangerous?</string>
    <string name="blizzards_are_dangerous_as_they_can_create_life_threatening_conditions_driving_can_become_difficult_or_even_impossible_due_to_whiteout_conditions_and_drifting_snow_strong_winds_and_cold_temperatures_also_create_another_danger_especially_in_the_midwest_where_wind_chills_can_be_below_65f_frostbite_and_hypothermia_can_set_in_fast_blizzards_can_also_cause_power_outages_and_pipes_to_freeze">Blizzards are dangerous as they can create life-threatening conditions. Driving can become difficult, or even impossible due to whiteoutconditions and drifting snow. Strong winds and cold temperatures also create another danger. Especially in the Midwest, where wind chills can be below -65F, frostbite and hypothermia can set in fast. Blizzards can also cause power outages and pipes to freeze.</string>
    <string name="types_of_blizzards">Types of blizzards</string>
    <string name="snowstorm_type_blizzard_this_is_the_traditional_blizzard_this_means_that_it_will_often_include_heavy_snowfall_and_below_freezing_temperatures_what_makes_it_a_blizzard_is_the_winds_of_at_least_35_mph">- Snowstorm-type Blizzard: this is the traditionalblizzard. This means that it will often include heavy snowfall and below-freezing temperatures. What makes it a blizzard is the winds of at least 35 mph.</string>
    <string name="ground_blizzard_the_difference_from_a_traditional_blizzard_is_that_there_is_no_snowfall_this_occurs_when_high_winds_blow_the_snow_that_has_already_fallen">- Ground Blizzard: the difference from a traditional blizzard is that there is no snowfall. This occurs when high winds blow the snow that has already fallen.</string>
    <string name="lake_effect_blizzard_these_are_most_common_along_large_lakes_such_as_the_great_lakes_these_types_of_blizzards_are_rare_only_because_lake_effect_snow_doesn_t_often_rise_when_the_wind_blows_too_fast">- Lake-Effect Blizzard: these are most common along large lakes, such as the Great Lakes. These types of blizzards are rare, only because lake-effect snow doesn\'t often rise when the wind blows too fast.</string>
    <string name="what_are_droughts">What are droughts?</string>
    <string name="droughts_are_periods_of_abnormally_dry_and_precipitation_less_weather_a_misconceptioon_is_that_droughts_are_brough_on_by_periods_of_no_rain_or_snow_and_while_this_is_common_the_onset_of_a_drought_may_be_less_noticeable_if_snow_or_rain_is_in_fewer_amounts_such_as_a_drizzle_here_and_flurries_there_instead_of_a_steady_rain_or_snow_showers_this_can_also_be_an_indication_of_a_drought_is_on_its_way">Droughts are periods of abnormally dry and precipitation-less weather. A misconceptioon is that droughts are brough on by periods of no rain or snow, and while this is common, the onset of a drought may be less noticeable. If snow or rain is in fewer amounts, such as a drizzle here and flurries there, instead of a steady rain or snow showers, this can also be an indication of a drought is on its way.</string>
    <string name="how_droughts_hurt">How droughts hurt</string>
    <string name="economic_impacts_this_includes_the_loss_of_timber_agriculture_and_fisheries_this_can_cause_an_increase_in_food_prices_and_in_less_developed_countried_famine_can_become_a_problem">- Economic Impacts: this includes the loss of timber, agriculture, and fisheries. This can cause an increase in food prices, and in less developed countried, famine can become a problem.</string>
    <string name="social_impacts_increased_chance_of_conflict_over_commodities_fertile_land_and_water_resources_it_can_also_include_abandonment_of_cultural_traditions_loss_of_homelands_changes_in_lifresytle_and_an_increased_chance_of_health_risks">- Social Impacts: increased chance of conflict over commodities, fertile land, and water resources. It can also include abandonment of cultural traditions, loss of homelands, changes in lifresytle, and an increased chance of health risks.</string>
    <string name="environmental_impacts_loss_in_species_biodivercity_migration_changes_reduced_air_quality_and_increased_soil_erosion">- Environmental Impacts: loss in species biodivercity, migration changes, reduced air quality, and increased soil erosion.</string>
    <string name="types_of_droughts">Types of droughts</string>
    <string name="hydrological_drought_watersheds_experience_depleted_amoutns_of_avaliable_water_lack_of_water_in_rivers_and_reservoirs_can_impact_hydroelectric_power_companies_farmers_wildfire_and_commities">- Hydrological Drought: watersheds experience depleted amoutns of avaliable water. Lack of water in rivers and reservoirs can impact hydroelectric power companies, farmers, wildfire, and commities.</string>
    <string name="meterological_drought_a_lack_of_precipitation_is_most_common_definition_of_a_drought">- Meterological Drought: a lack of precipitation is most common definition of a drought.</string>
    <string name="agricultural_drought_when_soil_moisture_becomes_a_problem_shortages_in_precipitation_changes_in_evapotranspiratioon_and_reduced_groundwater_levels_and_problems_for_crops">- Agricultural Drought: when soil moisture becomes a problem. Shortages in precipitation, changes in evapotranspiratioon, and reduced groundwater levels and problems for crops.</string>
    <string name="what_are_earthquakes">What are earthquakes?</string>
    <string name="tornadoformation">TornadoFormation</string>
    <string name="blizzardformation">blizzardformation</string>
</resources>