<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/colorPrimary"
        app:tabGravity="center"
        app:tabIndicatorColor="#FFFFFF"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextColor="#AEAEAE">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tornado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tornado" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Hurricane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hurricane" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Earthquake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earthquake" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tsunami"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tsunami" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Wildfire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wildfire" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Volcano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volcano" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Flood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flood" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Blizzard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blizzard" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Drought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drought" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>